Запрос данных по rates с локального сервера
