# src/app/shared/models/paged-response.model.ts
@@ -1,0 +1,10 @@
+import { IHttpResponseModel } from './http-response.model';
+
+export interface IPagedResponseModel<T> extends IHttpResponseModel<T> {
+  meta: {
+    total: number;
+    page: number;
+    limit: number;
+    totalPages: number;
+  };
+}
